Bug 1163064 - Collapse test groups and chunks

--- a/ui/css/treeherder.css
+++ b/ui/css/treeherder.css
@@ -587,6 +587,41 @@ th-watched-repo {
   display: none;
 }
 
+.group-btn {
+  background: transparent;
+  padding: 0 2px 0 2px;
+  vertical-align: 0;
+  line-height: 1.32;
+}
+.platform-group.group-btn:hover {
+    background: transparent;
+    color: black;
+}
+
+.group-count-list {
+    /*background-color: rgba(208, 228, 250, 0.51);*/
+    border-color: #d0e4fa;
+    border-color: rgba(208, 228, 250, 0.76);
+    border-style: solid;
+    border-width: 1px;
+    font-style: italic;
+}
+.group-count-list:hover {
+    border-color: rgb(181, 200, 222);
+
+    background-color: rgba(208, 228, 250, 0.51);
+    /*background-color: rgb(181, 200, 222);*/
+
+    color: white;
+}
+.group-count-list-icon {
+    color: #aeaeae;
+}
+/*.group-count-list-icon:hover {*/
+    /*background-color: #868686;*/
+    /*color: white;*/
+/*}*/
+
 .selected-job {
     border: 4px solid;
     background-color: #fff;
@@ -1223,7 +1258,14 @@ ul.failure-summary-list li .btn-xs {
  .job-btn.btn-ltgray,
  .job-btn.btn-green,
  .job-btn.btn-dkblue,
- .job-btn.btn-pink {
+ .job-btn.btn-yellow,
+ .job-btn.btn-pink,
+ .group-btn.btn-dkgray-count,
+ .group-btn.btn-ltgray-count,
+ .group-btn.btn-green-count,
+ .group-btn.btn-dkblue-count,
+ .group-btn.btn-yellow-count,
+ .group-btn.btn-pink-count {
     margin: 0 -5px 0 -1px;
  }
 
@@ -1232,6 +1274,12 @@ ul.failure-summary-list li .btn-xs {
  .job-btn.btn-purple {
     margin: 0 -3px 1px 0;
  }
+
+.btn-orange-classified-count::after,
+.btn-red-classified-count::after,
+.btn-purple-classified-count::after {
+    content: "*";
+}
 
 .btn-view-nav {
   background-color: transparent;
@@ -1370,7 +1418,8 @@ fieldset[disabled] .btn-orange.active {
   border-color: #dd6602;
 }
 
-.btn-orange-classified {
+.btn-orange-classified,
+.btn-orange-classified-count{
   color: #dd6602;
 }
 .btn-orange-classified:hover,
@@ -1427,7 +1476,8 @@ fieldset[disabled] .btn-red.active {
   border-color: #c2020e;
 }
 
-.btn-red-classified {
+.btn-red-classified,
+.btn-red-classified-count {
   color: #90010a;
 }
 .btn-red-classified:hover,
@@ -1484,7 +1534,8 @@ fieldset[disabled] .btn-dkblue.active {
   border-color: #2d48d6;
 }
 
-.btn-green {
+.btn-green,
+.btn-green-count {
   color: rgba(2, 130, 51, 0.75);
   font-weight: bold;
 }
@@ -1541,7 +1592,8 @@ fieldset[disabled] .btn-purple.active {
   color: white;
 }
 
-.btn-purple-classified {
+.btn-purple-classified,
+.btn-purple-classified-count {
   color: #6f0296;
 }
 .btn-purple-classified:hover,
@@ -1569,7 +1621,8 @@ fieldset[disabled] .btn-purple-classified.active {
   color: white;
 }
 
-.btn-yellow {
+.btn-yellow,
+.btn-yellow-count {
   color: #cdce1d;
   font-weight: bold;
 }
@@ -1595,7 +1648,8 @@ fieldset[disabled] .btn-yellow.active {
   border-color: #cdce1d;
 }
 
-.btn-ltgray {
+.btn-ltgray,
+.btn-ltgray-count {
   color: #e0e0e0;
 }
 .btn-ltgray:hover,
@@ -1621,7 +1675,8 @@ fieldset[disabled] .btn-ltgray.active {
   border-color: #e0e0e0;
 }
 
-.btn-mdgray {
+.btn-mdgray,
+.btn-mdgray-count {
   background-color: #bfbfbf;
   border-color: #bfbfbf;
 }
@@ -1668,7 +1723,8 @@ fieldset[disabled] .btn-resultset:hover {
   color: white;
 }
 
-.btn-dkgray {
+.btn-dkgray,
+.btn-dkgray-count {
   color: #7c7a7d;
 }
 .btn-dkgray:hover,
